tests/invalid/03_invalid_assignment.js
// 错肙3: 缺少赋值运算符右侧
let x =
